<resources>
    <string name="app_name">Weather</string>
    <string name="favo">Favourite</string>
    <string name="title_dashboard">Favourite</string>
    <string name="title_notifications">Alert</string>
    <string name="title_home">Home</string>
    <string name="alert">Alert</string>
    <string name="title_activity_maps">Map</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="setting">Settings</string>
    <string name="location">Location</string>
    <string name="mylocation">My Location Now (GPS)</string>
    <string name="addfrommap">Add Location From Map</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="details">Details</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="humidity">Humidity</string>
    <string name="clouds">Clouds</string>
    <string name="pressure">Pressure</string>
    <string name="now">Now</string>
    <string name="WeatherLocation">WEATHER LOCATION</string>
    <string name="units">UNITS</string>
    <string name="setLanguage">LANGUAGE</string>
    <string name="useDeviceLocation">Use Device Location</string>
    <string name="summaryMyLocation">Allow app to get your Location</string>
    <string name="locationFromMap">Location from map</string>
    <string name="summaryLocationFromMap">Choose place from map</string>
    <string name="cM">C° - meter/sec wind speed</string>
    <string name="kM">K° - meter/sec wind speed</string>
    <string name="fM">F° - miles/hour wind speed</string>
    <string name="c">°C</string>
    <string name="k">°K</string>
    <string name="f">°F</string>
    <string name="ms">m/s</string>
    <string name="mh">M/h</string>
    <string name="pa">Pa</string>
    <string name="messageDel">Are you sure to delete it?</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alarmSound">Alarm Sound</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="alarmNoAl">Alarm</string>

    <string name="alarmTime">Alarm Time</string>
    <string name="enterDate"> Enter Date</string>
    <string name="enterTime"> Enter Time</string>
    <string name="type">Type</string>
    <string name="timeintheday">Time in the day</string>
    <string name="anyTime">Any Time</string>
    <string name="periodoftime">Period of time</string>
    <string name="description">Description</string>
    <string name="mytripday">My trip day</string>
    <string name="from"> From 08.00</string>
    <string name="to"> To 11.00</string>
    <string name="invalid">Enter invalid Time</string>
    <string name="please">Please complete your data before save</string>
    <string name="pleaseAfter">Please Enter end time after start time</string>
    <string name="weatherAlarm">Weather Alarm</string>

    <string name="alarmAdded">Alarm is added</string>
    <string name="rain">Rain</string>
    <string name="cloud">Cloud</string>
    <string name="thunderStorm">Thunder Storm</string>
    <string name="snow">Snow</string>
    <string name="wind">Wind</string>
    <string name="mistFog">Mist / Fog</string>
    <string name="selectAlarmTime">Select Alarm Time</string>
    <string name="alarmStart">Start</string>
    <string name="alarmEnd">End</string>
    <string name="noDesc">No Description</string>
    <string name="alertcancelled">Alert Cancelled</string>
    <string name="at"> at </string>
    <string name="addAlarm">Add Alarm</string>
    <string name="youHave">You have to put mark on place to add it!</string>
    <string name="takeCareAlert">Take care alert</string>
    <string name="save">Save</string>
    <string name="mapOpen">map is opening …</string>
    <string name="nothing">Nothing to show</string>
    <string name="reqDeni">Permission Denied!!</string>
    <string name="accept">You have to accept it</string>
    <string name="turnOn">You have to turn on location</string>
    <string name="timeExp">(Time expired) deleting…</string>

</resources>