<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/WeatherLocation"
        android:icon="@drawable/ic_location">
        <SwitchPreferenceCompat
            android:key="USE_DEVICE_LOCATION"
            android:title="@string/useDeviceLocation"
            android:summary="@string/summaryMyLocation"
            android:defaultValue="true"
            android:disableDependentsState="true"/>

        <SwitchPreferenceCompat
           android:key="CUSTOM"
           android:title="@string/locationFromMap"
           android:summary="@string/summaryLocationFromMap"
           android:defaultValue="false"
           android:dependency="USE_DEVICE_LOCATION"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/units"
        android:icon="@drawable/ic_baseline_wb_sunny_24">
        <ListPreference
            android:key="UNIT_SYSTEM"
            android:summary="%s"
            android:defaultValue="metric"
            android:entries="@array/unitSystemEntries"
            android:entryValues="@array/unitSystemValues"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/setLanguage"
        android:icon="@drawable/ic_font">
        <ListPreference
            android:key="LANGUAGE_SYSTEM"
            android:summary="%s"
            android:defaultValue="en"
            android:entries="@array/languageSystemEntries"
            android:entryValues="@array/languageSystemValues"/>
    </PreferenceCategory>
</PreferenceScreen>