<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_wb_sunny_24"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_favorite_24"
        app:itemIconTint="#EF0202"
        app:itemTextColor="#F40404"
        android:title="@string/favo" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_alarm"
        android:title="@string/alert" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/setting" />


</menu>